# jira

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/checking-mcp-compliance/: SKILL.md
Building MCP with LLMs/: llms-full.txt
src/jira_mcp/: client.py  jira-swagger-v3.v3.json  server.py  tools.py
tests/: test_client.py  test_server.py  test_tools.py
